@@ -1,5 +1,25 @@
 This file records outstanding actions for the math module
 
+dd. 4 march 2021
+Paired t-test: https://mathworld.wolfram.com/Pairedt-Test.html
+
+
+dd. 19 february 2021
+Provide alternatives for pdf-gamma/cdf-gamma: using mean and standard deviation instead of alpha and beta
+
+Support Kaplan-Meier for censored data
+
+dd. 11 february 2021
+Check:
+- statistical procedures for testing " normality" - I saw some obviously not normal datasets that were still not flagged as such
+  -- that seems to have been my mistake: comparing the wrong graphs
+Implement:
+- PPCC
+- Plot positions
+- QQ plots
+- general support for censored data
+
+
 dd. 19 january 2021
 Solve a problem with determineSVD - reported by Nicolas Robert
 https://groups.google.com/g/comp.lang.tcl/c/RKcM7OfVkXk
