@@ -6,7 +6,8 @@
 [moddesc   {Tcl Math Library}]
 [titledesc {Change point detection methods}]
 [category  Mathematics]
-[require Tcl [opt 8.5]]
+[require Tcl 8.6]
+[require TclOO]
 [require math::statistics]
 [require math::changepoint [opt 0.1]]
 
