@@ -6,7 +6,8 @@
 [moddesc   {Tcl Math Library}]
 [titledesc {Digital filters}]
 [category  Mathematics]
-[require Tcl [opt 8.5]]
+[require Tcl 8.6]
+[require TclOO]
 [require math::filters [opt 0.1]]
 
 [description]
